--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <footer>
             <div>
                 <p class="last-p">
-                    Powered by <a class="less" href="">Fânio Mears</a>
+                    Powered by <a class="less" href="https://github.com/FanioPanga-23?tab=repositories" target="_blank">Fânio Mears</a>
                 </p>
             </div>
         </footer>
